@@ -9,83 +9,57 @@ import java.util.Optional;
 
 public final class JsonUtils {
 
-    public static final ObjectMapper OBJECT_MAPPER = new ObjectMapper()
+    public static final ObjectMapper MAPPER = new ObjectMapper()
         .registerModule(new JavaTimeModule());
     
     private JsonUtils() {
     }
-    
-    static String toJson(Object obj) {
-        if (obj == null) {
-            return null;
-        }
+
+    public static String toJson(Object obj) {
+        if (obj == null) return null;
         try {
-            return OBJECT_MAPPER.writeValueAsString(obj);
+            return MAPPER.writeValueAsString(obj);
         } catch (JsonProcessingException e) {
-            throw new JsonSerializationException("Failed to serialize to JSON", e);
+            throw new RuntimeException("JSON serialize failed: " + obj.getClass().getSimpleName(), e);
         }
     }
-    
-    static <T> Optional<T> fromJson(String json, TypeReference<T> typeRef) {
-        if (json == null || json.trim().isEmpty()) {
-            return Optional.empty();
-        }
+
+    public static <T> Optional<T> fromJson(String json, TypeReference<T> type) {
+        if (json == null || json.isBlank()) return Optional.empty();
         try {
-            T value = parseJson(json, typeRef);
-            if (value == null) {
-                return Optional.empty();
-            }
-            T normalized = normalizeStringValues(value, typeRef);
-            return Optional.of(normalized);
+            T value = parse(json, type);
+            return Optional.ofNullable(unwrapIfNeeded(value, type));
         } catch (JsonProcessingException e) {
-            throw new JsonSerializationException("Failed to deserialize JSON", e);
+            throw new RuntimeException("JSON deserialize failed: " + type.getType(), e);
         }
     }
     
-    private static <T> T parseJson(String json, TypeReference<T> typeRef) throws JsonProcessingException {
+    private static <T> T parse(String json, TypeReference<T> type) throws JsonProcessingException {
         try {
-            return OBJECT_MAPPER.readValue(json, typeRef);
-        } catch (JsonProcessingException firstException) {
-            Optional<String> unwrapped = tryUnwrapJsonString(json);
-            if (unwrapped.isEmpty()) {
-                throw firstException;
-            }
-            return OBJECT_MAPPER.readValue(unwrapped.get(), typeRef);
+            return MAPPER.readValue(json, type);
+        } catch (JsonProcessingException first) {
+            String unwrapped = unwrapString(json);
+            if (unwrapped == null) throw first;
+            return MAPPER.readValue(unwrapped, type);
         }
-    }
-    
-    private static <T> T normalizeStringValues(T value, TypeReference<T> typeRef) {
-        if (isObjectType(typeRef) && value instanceof String str) {
-            return unwrapString(str);
-        }
-        return value;
     }
     
     @SuppressWarnings("unchecked")
-    private static <T> T unwrapString(String str) {
+    private static <T> T unwrapIfNeeded(T value, TypeReference<T> type) {
+        if (!isObjectType(type) || !(value instanceof String)) return value;
+        String unwrapped = unwrapString((String) value);
+        return unwrapped != null ? (T) unwrapped : value;
+    }
+    
+    private static String unwrapString(String json) {
         try {
-            String unwrapped = OBJECT_MAPPER.readValue(str, String.class);
-            return (T) (unwrapped != null ? unwrapped : str);
+            return MAPPER.readValue(json, String.class);
         } catch (JsonProcessingException e) {
-            return (T) str;
+            return null;
         }
     }
     
-    private static boolean isObjectType(TypeReference<?> typeRef) {
-        return typeRef.getType().getTypeName().equals("java.lang.Object");
-    }
-    
-    private static Optional<String> tryUnwrapJsonString(String json) {
-        try {
-            return Optional.ofNullable(OBJECT_MAPPER.readValue(json, String.class));
-        } catch (JsonProcessingException ignored) {
-            return Optional.empty();
-        }
-    }
-    
-    static class JsonSerializationException extends RuntimeException {
-        JsonSerializationException(String message, Throwable cause) {
-            super(message, cause);
-        }
+    private static boolean isObjectType(TypeReference<?> type) {
+        return type.getType().getTypeName().equals("java.lang.Object");
     }
 }
